fix: better duplicate checking with better validation, enchanced MyTickets.jsx provides better looking ticket cards and their modals, report form now also passes builiding id when checking for duplicates
